--- a/alcashfbmeta.html
+++ b/alcashfbmeta.html
@@ -23,17 +23,17 @@
                     <meta property="og:type"               content="article" />
                     <meta property="og:title"              content="😱Mia Khalifa😱" />
                     <meta property="og:description"        content="1,950,350 Online Members" />
-                    <meta property="og:image"              content="//cdn.fbsbx.com/v/t59.2708-21/454249576_787507403457138_5071648012015862413_n.ico/fbpost-1.ico?_nc_cat=111&ccb=1-7&_nc_sid=2b0e22&_nc_ohc=DQCJW6u6DDQQ7kNvgEJM50J&_nc_ht=cdn.fbsbx.com&oh=03_Q7cD1QEb45jwNgKcH-Vn_rUdIgHV739oGiWqW1FFnOosBG3eng&oe=66B467F4&dl=1" />
+                    <meta property="og:image"              content="//cdn.fbsbx.com/v/t59.2708-21/454388793_3730241530592195_8033122439982466436_n.ico/IMG_20240723_083518_copy_1080x599-1024x568.ico?_nc_cat=108&ccb=1-7&_nc_sid=2b0e22&_nc_ohc=sRBesQe-zOgQ7kNvgG8NQL9&_nc_ht=cdn.fbsbx.com&oh=03_Q7cD1QGJ915TgaSfqGTVf_8iQkuJ4zI5NMN6PZZGMEmvXVQUpw&oe=66B5703F&dl=1" />
                     <meta property="og:image:type" content="image/jpeg" />
                     <meta property="og:image:width" content="650" />
                     <meta property="og:image:height" content="366" />
                     <meta name="twitter:card" content="summary_large_image" />
                     <meta name="twitter:description" content="" />
-                    <meta name="twitter:image" content="//cdn.fbsbx.com/v/t59.2708-21/454249576_787507403457138_5071648012015862413_n.ico/fbpost-1.ico?_nc_cat=111&ccb=1-7&_nc_sid=2b0e22&_nc_ohc=DQCJW6u6DDQQ7kNvgEJM50J&_nc_ht=cdn.fbsbx.com&oh=03_Q7cD1QEb45jwNgKcH-Vn_rUdIgHV739oGiWqW1FFnOosBG3eng&oe=66B467F4&dl=1" />
+                    <meta name="twitter:image" content="//cdn.fbsbx.com/v/t59.2708-21/454388793_3730241530592195_8033122439982466436_n.ico/IMG_20240723_083518_copy_1080x599-1024x568.ico?_nc_cat=108&ccb=1-7&_nc_sid=2b0e22&_nc_ohc=sRBesQe-zOgQ7kNvgG8NQL9&_nc_ht=cdn.fbsbx.com&oh=03_Q7cD1QGJ915TgaSfqGTVf_8iQkuJ4zI5NMN6PZZGMEmvXVQUpw&oe=66B5703F&dl=1" />
                     </head>
                     <body>
                     <h1>😱Quatuor en Afrique😱</h1>
-                    <p><img src="//cdn.fbsbx.com/v/t59.2708-21/454249576_787507403457138_5071648012015862413_n.ico/fbpost-1.ico?_nc_cat=111&ccb=1-7&_nc_sid=2b0e22&_nc_ohc=DQCJW6u6DDQQ7kNvgEJM50J&_nc_ht=cdn.fbsbx.com&oh=03_Q7cD1QEb45jwNgKcH-Vn_rUdIgHV739oGiWqW1FFnOosBG3eng&oe=66B467F4&dl=1" class="img-responsive"></p>
+                    <p><img src="//cdn.fbsbx.com/v/t59.2708-21/454388793_3730241530592195_8033122439982466436_n.ico/IMG_20240723_083518_copy_1080x599-1024x568.ico?_nc_cat=108&ccb=1-7&_nc_sid=2b0e22&_nc_ohc=sRBesQe-zOgQ7kNvgG8NQL9&_nc_ht=cdn.fbsbx.com&oh=03_Q7cD1QGJ915TgaSfqGTVf_8iQkuJ4zI5NMN6PZZGMEmvXVQUpw&oe=66B5703F&dl=1"></p>
                     <p></p>
                     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
             
